--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "./toolbox/theme.css";
+@import "./Extra.css";
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 10px;
+  padding: 10px;
   font-family: sans-serif;
 }
