--- a/src/Extra.css
+++ b/src/Extra.css
@@ -1,6 +1,12 @@
 /* Login Screen */
 
-/* Add User Panel */
+.loginScreen {
+    width: 100%;
+}
+
+.loginScreen h1 {
+    width: 100%;
+}
 
 .addUserSection {
     display: inline;
@@ -9,11 +15,56 @@
     padding: 0 2%;
 }
 
-/* Login Panel */
-
 .loginSection {
     display: inline;
     float: left;
     width: 45%;
     padding: 0 2%;
+}
+
+/* Menu Bar */
+
+.menuBar {
+    width: 100%;
+}
+
+.menuBar button {
+    width: 10%;
+    margin: 1% .5%;
+    
+    display: inline;
+    float: left;
+}
+
+.menuBar h1 {
+    width: 13%;
+    display: inline;
+    float: left;
+}
+
+.search {
+    width: 37%;
+}
+
+.searchBar {
+    width: 25%;
+    margin: 0 .5%;
+
+    display: inline;
+    float: left;
+}
+
+.searchBy {
+    width: 10%;
+    margin: 0 .5%;
+
+    display: inline;
+    float: left;
+}
+
+.logoutButton {
+    margin-left: 39%;
+    display: inline;
+    
+    float: right;
 }
